--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -10,7 +10,7 @@ https://www.tooplate.com/view/2115-marvel
 @import url("https://fonts.googleapis.com/css?family=Maven+Pro:400,700");
 
 body {
-  font-family: "Maven Pro", sans-serif;
+  font-family: 'Sriracha', cursive;
   padding-top: 70px;
 }
 
@@ -20,7 +20,7 @@ body {
 
 .small-text {
   color: #5b5b5b;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: bold;
   padding: 8px 6px;
   border-radius: 50px;
